2009-10-16  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug with facet values containing commas

2009-09-18  Ingo Renner  <ingo.renner@dkd.de>

	* Added a Status check for Solr server availability

2009-09-16  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an XSS issue
	* Bumped version to 1.0.1 after release in TER
	* Fixed compatibility with EXT:scheduler v1.0.0

2009-09-15  Ingo Renner  <ingo.renner@dkd.de>

	* Initial Public Release of the community version